--- a/src/App.css
+++ b/src/App.css
@@ -37,12 +37,42 @@
   }
 }
 
+.header {
+  background-color: rgb(164, 128, 75);
+  padding-top: 10px;
+  padding-bottom: 10px;
+  font-size: 50px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-weight: 600;
+  color: white;
+}
+
+.search-bar {
+  background-image: url(https://media.istockphoto.com/id/1350259361/photo/big-dinner-table-with-italian-food-pizzas-and-pastas.jpg?s=612x612&w=0&k=20&c=lDXLeRmUtK4KmAtVN0uchKeFMYK_gSk5N6oO3oFjEdg=);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  max-height: 200px;
+  padding: 95px;
+  }
+
+  .search-bar input {
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+    height: 35px; 
+    width: 300px;
+    font-size: 20px;
+    color: black;
+    border-radius: 5px;
+    box-shadow: 10px, 0px, 5px, 5px;
+    ;
+  }
+
 .business-list {
   display: flex;
-  justify-content: space-between; 
-  flex-wrap: wrap; 
-  max-width: 1200px; 
-  margin: 0 auto; 
+  justify-content: space-between;
+  flex-wrap: wrap;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .business-card {
