--- a/src/App.css
+++ b/src/App.css
@@ -73,6 +73,19 @@
     font-size: 20px;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }
+  .search-bar button rating {
+    color: white;
+    background-color: none;
+    margin: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    border-radius: 5px;
+    border-color:  rgb(164, 128, 75);
+    font-size: 20px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  }
   .search-bar button {
     color: white;
     background-color: rgb(164, 128, 75);
