--- a/src/App.css
+++ b/src/App.css
@@ -100,25 +100,25 @@
   .search-bar li {
     cursor: pointer;
     width: 4.33rem;
-    border-bottom: 1px solid #fff;
+    border-bottom: 3px solid #fff;
     padding: 0 2.58rem 0.33rem 2.58rem;
     line-height: 1.13;
     text-align: center;
     font-weight: 600;
-    font-size: 0.83rem;
+    font-size: 1.25rem;
     transition: color 0.25s;
     list-style: none;
   }
 
   .search-bar li:hover {
-    color: #d4cfcf;
+    color:#a47e32;
   }
 
-  .search-bar li.active,
+  /* .search-bar li.active,
   .search-bar li.active:hover {
-  border-bottom: 1px solid #f0c36c;
-  color: #f0c36c;
-}
+  border-bottom: 1px solid #a43243;
+  color: #a47e32;
+} */
 .business-list {
   display: flex;
   justify-content: space-between;
