--- a/src/SearchBar.module.css
+++ b/src/SearchBar.module.css
@@ -1,4 +1,4 @@
-.SearchBar {
+/* .SearchBar {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -97,4 +97,4 @@
     margin: 1rem;
     margin-bottom: 0.86rem;
   }
-}
+} */
